[package]
name = "day15"
version = "0.1.0"
authors = ["Neil <neilhube12@gmail.com>"]
edition = "2018"
description="Day 15 of AoC"
categories=["algorithms","data-structures"]
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = true